Child_Linguistic_Analysis/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/ny/w9_lh8x96vn_3cstzf5d60s00000gn/T/AppTranslocation/6919F0BB-99E6-465C-8ECB-46BC8976A4B2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/CarmenHomeFolderTest/Documents/CS 230 Data Structures/cchan7_finalProject
-d
/Users/CarmenHomeFolderTest/Documents/CS 230 Data Structures/cchan7_finalProject/doc
-encoding
UTF-8
-charset
UTF-8
/Users/CarmenHomeFolderTest/Documents/CS 230 Data Structures/cchan7_finalProject/Child.java
<---- end of javadoc command ---->
Loading source file /Users/CarmenHomeFolderTest/Documents/CS 230 Data Structures/cchan7_finalProject/Child.java...
/Users/CarmenHomeFolderTest/Documents/CS 230 Data Structures/cchan7_finalProject/Child.java:14: error: <identifier> expected
    String[] sa;mpleFreq
                        ^
/Users/CarmenHomeFolderTest/Documents/CS 230 Data Structures/cchan7_finalProject/Child.java:29: error: repeated modifier
    public Hashtable<T, T> retrieve22Words(Children child) {
    ^
2 errors
